# Quantum-Calibration-Agent-Blueprint

./: .gitignore  README.md  cli.py  config.yaml  prompt.py  pyproject.toml  server.py
.github/workflows/: ci.yml  fern-docs-preview-comment.yml  publish-fern-docs.yml
cookbook/: conf.py  index.md  requirements.txt  tutorial.md  vllm-local-model-setup.md
cookbook/_static/: custom.css
cookbook/developer-guide/: architecture.md  contributing.md  index.md
cookbook/quick-start/: index.md  installation.md
cookbook/user-guide/: cli-overview.md  configuration.md  index.md  knowledge-base.md
cookbook/user-stories/: 01-experiment-execution.md  02-data-analysis.md  03-workflow-management.md  04-agent-interaction.md  05-system-setup.md  README.md  personas.md
core/: __init__.py  discovery.py  models.py  runner.py  storage.py
data/knowledge/: system-prompt.md
docs/: Makefile  README.md
docs/latest/: index.mdx  tutorial.mdx  vllm-local-model-setup.mdx
fern/: docs.yml  fern.config.json  latest.yml
scripts/: __init__.py  qubit_params.py  qubit_spectroscopy.py  rabi_oscillation.py  ramsey_measurement.py  resonator_spectroscopy.py  t1_measurement.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_experiment_cli.py  test_experiment_pipeline.py  test_workflow_cli.py
tests/unit/: __init__.py  conftest.py  test_discovery.py  test_find_tool.py  test_lab_tool.py  test_renderer.py  test_runner.py  test_scripts.py  test_storage.py  test_vlm_providers.py  test_vlm_tool.py  test_workflow_tool.py  test_workflow_tool_actions.py
tools/: __init__.py  find_tool.py  lab_tool.py  vlm_tool.py  workflow_tool.py
ui/: Dockerfile  LICENSE  jest.config.js  jest.setup.js  middleware.ts  next-env.d.ts  next-i18next.config.js  next.config.js  package-lock.json  playwright.config.ts  postcss.config.js  prettier.config.js  tailwind.config.js  vitest.config.ts
ui/__mocks__/: next-i18next.js  react-markdown.js  websocket.ts
ui/constants/: index.d.ts  index.js
ui/contexts/: ThemeContext.tsx
ui/e2e/: apparatus.spec.ts  chat-debug.spec.ts  chat-integration.spec.ts  docs-screenshots.spec.ts  experiments.spec.ts  hitl-resume.spec.ts  knowledge.spec.ts  langgraph-integration.spec.ts  navigation.spec.ts  playwright.config.ts  streaming-debug.spec.ts  workflows.spec.ts
ui/hooks/: useConversationOperations.ts  useCreateReducer.ts  useFeedback.ts  useFolderOperations.ts  useTypewriter.ts
ui/pages/: _app.tsx  _document.tsx  database-updates.tsx  index.tsx  workflows.tsx
ui/proxy/: langgraph-processors.js  request-transformers.js  response-processors.js  server.js
ui/styles/: globals.css
ui/types/: chat.ts  data.ts  error.ts  export.ts  folder.ts  index.ts  qcal.ts  (+3 more)
vlm/: __init__.py  providers.py  renderer.py
(+151 files in other folders)
