[project]
name = "qca"
version = "0.1.0"
description = "Quantum Calibration Agent"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.0",
    "deepagents-cli>=0.0.30",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "h5py",
    "pyyaml",
    "httpx",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-core>=1.2.28",
    "kaleido",
    "plotly",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pytest-asyncio==1.3.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton>=0.5",
]

[project.scripts]
qca = "cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "prompt", "server"]
packages = ["tools", "vlm", "core", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
addopts = [
    "--strict-markers",
    "-v",
]
asyncio_mode = "auto"
