[project]
name = "qca"
version = "0.1.0"
description = "Quantum Calibration Agent"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents==0.5.3",
    "deepagents-cli==0.0.40",
    "typer==0.24.1",
    "rich==14.3.4",
    "h5py==3.16.0",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "python-dotenv==1.2.2",
    "langchain-nvidia-ai-endpoints==1.2.1",
    "langchain-core==1.3.0",
    "kaleido==1.2.0",
    "plotly==6.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pytest-asyncio==1.3.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton>=0.5",
]

[project.scripts]
qca = "cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "prompt", "server"]
packages = ["tools", "vlm", "core", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
addopts = [
    "--strict-markers",
    "-v",
]
asyncio_mode = "auto"
